--- a/page4.html
+++ b/page4.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="assets/images/16pic-2096340-b-128x103.png" type="image/x-icon">
   <meta name="description" content="Web Builder Description">
   
-  <title>Photography</title>
+  <title>Design</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:700,400&subset=cyrillic,latin,greek,vietnamese">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -40,7 +40,7 @@
                 <div class="hamburger-icon"></div>
             </button>
 
-            <ul class="nav-dropdown collapse pull-xs-right navbar-toggleable-sm nav navbar-nav" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="index.html" aria-expanded="false">Home</a></li><li class="nav-item dropdown"><a class="nav-link link" href="page4.html" aria-expanded="false">Photography</a></li><li class="nav-item dropdown"><a class="nav-link link" href="page3.html" aria-expanded="false">Painting<br><br></a></li><li class="nav-item"><a class="nav-link link" href="page5.html" aria-expanded="false">Video<br><br></a></li><li class="nav-item"><a class="nav-link link" href="page6.html" aria-expanded="false">Article<br><br></a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/" aria-expanded="false"></a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-default btn-default-outline" href="page1.html">Contact us</a></li></ul>
+            <ul class="nav-dropdown collapse pull-xs-right navbar-toggleable-sm nav navbar-nav" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="index.html" aria-expanded="false">Home</a></li><li class="nav-item dropdown"><a class="nav-link link" href="page4.html" aria-expanded="false">Design</a></li><li class="nav-item dropdown"><a class="nav-link link" href="page3.html" aria-expanded="false">Painting<br><br></a></li><li class="nav-item"><a class="nav-link link" href="page5.html" aria-expanded="false">Video<br><br></a></li><li class="nav-item"><a class="nav-link link" href="page6.html" aria-expanded="false">Article<br><br></a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/" aria-expanded="false"></a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-default btn-default-outline" href="page1.html">Contact us</a></li></ul>
 
         </div>
 
@@ -48,7 +48,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="mbr-section mbr-section--relative mbr-parallax-background mbr-after-navbar" id="msg-box4-q" data-rv-view="19" style="background-image: url(assets/images/1351666800326-2000x1250.jpg);">
+<section class="engine"><a href="https://mobirise.info/z">best free css templates</a></section><section class="mbr-section mbr-section--relative mbr-parallax-background mbr-after-navbar" id="msg-box4-q" data-rv-view="19" style="background-image: url(assets/images/1351666800326-2000x1250.jpg);">
     <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(31, 31, 31);"></div>
     <div class="mbr-section__container mbr-section__container--isolated container" style="padding-top: 124px; padding-bottom: 124px;">
         <div class="row">
