--- a/page5.html
+++ b/page5.html
@@ -35,7 +35,7 @@
                 <div class="hamburger-icon"></div>
             </button>
 
-            <ul class="nav-dropdown collapse pull-xs-right navbar-toggleable-sm nav navbar-nav" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="index.html" aria-expanded="false">Home</a></li><li class="nav-item dropdown"><a class="nav-link link" href="page4.html" aria-expanded="false">Photography</a></li><li class="nav-item dropdown"><a class="nav-link link" href="page3.html" aria-expanded="false">Painting<br><br></a></li><li class="nav-item"><a class="nav-link link" href="page5.html" aria-expanded="false">Video<br><br></a></li><li class="nav-item"><a class="nav-link link" href="page6.html" aria-expanded="false">Article<br><br></a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/" aria-expanded="false"></a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-default btn-default-outline" href="page1.html">Contact us</a></li></ul>
+            <ul class="nav-dropdown collapse pull-xs-right navbar-toggleable-sm nav navbar-nav" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="index.html" aria-expanded="false">Home</a></li><li class="nav-item dropdown"><a class="nav-link link" href="page4.html" aria-expanded="false">Design</a></li><li class="nav-item dropdown"><a class="nav-link link" href="page3.html" aria-expanded="false">Painting<br><br></a></li><li class="nav-item"><a class="nav-link link" href="page5.html" aria-expanded="false">Video<br><br></a></li><li class="nav-item"><a class="nav-link link" href="page6.html" aria-expanded="false">Article<br><br></a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/" aria-expanded="false"></a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-default btn-default-outline" href="page1.html">Contact us</a></li></ul>
 
         </div>
 
@@ -43,7 +43,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">how to create your own website for free</a></section><section class="mbr-figure mbr-figure--wysiwyg mbr-figure--full-width mbr-figure--caption-inside-bottom mbr-after-navbar" id="image1-1w" data-rv-view="254">
+<section class="engine"><a href="https://mobirise.info/s">free bootstrap themes</a></section><section class="mbr-figure mbr-figure--wysiwyg mbr-figure--full-width mbr-figure--caption-inside-bottom mbr-after-navbar" id="image1-1w" data-rv-view="254">
 
     <div><img src="assets/images/img-2s0s75-1400x2100.jpeg" class="mbr-figure__img"></div>
     <figcaption class="mbr-figure__caption mbr-figure__caption--std-grid">
@@ -230,7 +230,7 @@
                             <div class="hide" data-form-alert-success="true">Thanks for filling out form!</div>
                         </div>
                         <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="SUBSCRIBE TO OUR NEWSLETTER">
-                            <input type="hidden" value="bOYEQ/UsVhNo+5S424/iO8XUbBHAZiljc06MNd0znFYp/NeQX3tSefNKLa2QEKiNjMs8IkatKLFgddr1UlC6Va7DeMkgoXOBMGPu4d2yzjr/EZWCHvrpKx3VD6jtGV9w" data-form-email="true">
+                            <input type="hidden" value="sHEz8ahnoku3jYi3+YlETGiQn4Oyz3SddBBedWBvqwTtKhRejlV5+BoFb+XxXWY0ORyET2D4hi9Ci8HpTYXtX0b1b4M9k4ZXr7BPsgKrI+649SfQolVaaRTjzW7TJmLf" data-form-email="true">
                             <div class="mbr-form__left">
                                 <input type="email" class="form-control" name="email" required="" placeholder="Enter Your Email Address..." data-form-field="Email">
                             </div>
