--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">free web creation software</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background mbr-after-navbar" id="header4-3" data-rv-view="7" style="background-image: url(assets/images/imgu7-1740x704.jpg);">
-    <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center">
+<section class="engine"><a href="https://mobirise.info/r">free bootstrap templates</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background" id="header4-3" data-rv-view="7" style="background-image: url(assets/images/imgu7-1740x704.jpg);">
+    <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center mbr-after-navbar">
         
         <div class="mbr-box__container mbr-section__container container">
             <div class="mbr-box mbr-box--stretched"><div class="mbr-box__magnet mbr-box__magnet--center-center">
                 <div class="row"><div class=" col-sm-8 col-sm-offset-2">
                     <div class="mbr-hero animated fadeInUp">
                         <h1 class="mbr-hero__text">THE MAGICIANS</h1>
-                        <p class="mbr-hero__subtext">Magic comes from plains. &nbsp;<br><br><strong><em>WELCOME TO MY MAGIC WORLD.</em></strong></p>
+                        <p class="mbr-hero__subtext">Magic comes from plains. &nbsp;<br><br><strong><em>WELCOME TO FILORY</em></strong></p>
                     </div>
                     
                 </div></div>
@@ -80,7 +80,7 @@
                         </div>
                     </div>
                     <div class="mbr-section__container mbr-section__container--middle">
-                        <div class="mbr-article mbr-article--auto-align mbr-article--wysiwyg"><p>這裡無不有可能，</p><p>警告! 一旦踏入便很難忘記。</p></div>
+                        <div class="mbr-article mbr-article--auto-align mbr-article--wysiwyg"><p>FILORY無不有可能，</p><p>警告! 一旦踏入便很難忘記。</p></div>
                     </div>
                     <div class="mbr-section__container">
                         <div class="mbr-buttons mbr-buttons--auto-align btn-inverse"><a class="mbr-buttons__btn btn btn-lg btn-default" href="https://youtu.be/-aNObjQ4xwI">LEARN MORE</a></div>
@@ -149,7 +149,7 @@
                 <div class="row"><div class=" col-sm-6 col-sm-offset-6">
                     <div class="mbr-hero animated fadeInUp">
                         <h1 class="mbr-hero__text">WHERE?</h1>
-                        <p class="mbr-hero__subtext">歡迎來到安啵的奇幻世界，這是一個沒有規則的地方，只有你和我。
+                        <p class="mbr-hero__subtext">歡迎來到安啵的奇幻世界---FILORY，<br>這是一個沒有規則的地方，只有你和我。
 <br>喔、別忘了告訴你小心這裡的空氣，<br>恩...可能有些大麻，小心不要對這裡上癮了。<br><br>準備好了嗎? 我們走吧!</p>
                     </div>
                     <div class="mbr-buttons btn-inverse mbr-buttons--left"><a class="mbr-buttons__btn btn btn-lg animated fadeInUp delay btn-info" href="page4.html">READY?</a></div>
