--- a/page4.html
+++ b/page4.html
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-  <section id="dropdown-menu-k" data-rv-view="350">
+  <section id="dropdown-menu-k" data-rv-view="679">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
 
@@ -48,7 +48,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">free web creation software</a></section><section class="mbr-section mbr-section--relative mbr-parallax-background mbr-after-navbar" id="msg-box4-q" data-rv-view="271" style="background-image: url(assets/images/1351666800326-2000x1250.jpg);">
+<section class="engine"><a href="https://mobirise.info/c">free site builder</a></section><section class="mbr-section mbr-section--relative mbr-parallax-background mbr-after-navbar" id="msg-box4-q" data-rv-view="600" style="background-image: url(assets/images/1351666800326-2000x1250.jpg);">
     <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(31, 31, 31);"></div>
     <div class="mbr-section__container mbr-section__container--isolated container" style="padding-top: 124px; padding-bottom: 124px;">
         <div class="row">
@@ -72,7 +72,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="features1-1w" data-rv-view="274" style="background-color: rgb(255, 255, 255);">
+<section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="features1-1w" data-rv-view="603" style="background-color: rgb(255, 255, 255);">
     
     <div class="mbr-section__container mbr-section__container--std-top-padding mbr-section__container--sm-bot-padding mbr-section-title container" style="padding-top: 124px;">
         <div class="mbr-header mbr-header--center mbr-header--wysiwyg row">
@@ -162,7 +162,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-parallax-background" id="content5-19" data-rv-view="277" style="background-image: url(assets/images/12783527-1089581434406931-4151753557295839990-o-2000x1333.jpeg);">
+<section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-parallax-background" id="content5-19" data-rv-view="676" style="background-image: url(assets/images/12783527-1089581434406931-4151753557295839990-o-2000x1333.jpeg);">
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(40, 50, 78);"></div>
     <div class="mbr-section__container container mbr-section__container--first" style="padding-top: 124px;">
         <div class="mbr-header mbr-header--wysiwyg row">
@@ -177,7 +177,7 @@
             <div class="mbr-article mbr-article--wysiwyg col-sm-8 col-sm-offset-2"><p><br></p><p><br></p><p>&nbsp;&nbsp;&nbsp;&nbsp;從興趣喜歡跟朋友去拍拍網美照，到買了第一台相機開始了攝影路，希望自己在以後能有個屬於自己的作品，擁有一個團隊，拍攝動態、平面的攝影都想多多嘗試，用相機，去記錄我的生活，失去文字後的我，老天並沒有放棄我，反而又開了一扇窗，讓我又多了一個方式去告訴大家，我眼中的世界，在這個世界我想當個第三者，去記錄這些，美好的瞬間，去凝結永遠。</p><p><br></p><p><br></p></div>
         </div>
     </div>
-    <div class="mbr-section__container container mbr-section__container--last" style="padding-bottom: 124px;">
+    <div class="mbr-section__container container mbr-section__container--last" style="padding-bottom: 93px;">
         <div class="row">
             <div class="col-sm-8 col-sm-offset-2">
                 <div class="mbr-buttons mbr-buttons--center btn-inverse"><a class="mbr-buttons__btn btn btn-lg btn-default" href="https://mobirise.com">LEARN MORE</a></div>
@@ -186,7 +186,7 @@
     </div>
 </section>
 
-<section class="mbr-section" id="header3-1a" data-rv-view="280">
+<section class="mbr-section" id="header3-1a" data-rv-view="606">
     <div class="mbr-section__container container mbr-section__container--first">
         <div class="mbr-header mbr-header--wysiwyg row">
             <div class="col-sm-8 col-sm-offset-2">
@@ -197,7 +197,7 @@
     </div>
 </section>
 
-<section class="mbr-slider mbr-section mbr-section--no-padding carousel slide" data-ride="carousel" data-wrap="true" data-interval="5000" id="slider2-1w" data-rv-view="282">
+<section class="mbr-slider mbr-section mbr-section--no-padding carousel slide" data-ride="carousel" data-wrap="true" data-interval="5000" id="slider2-1w" data-rv-view="608">
     <div class="mbr-section__container article-slider container mbr-section__container--last">
         <div class=" col-sm-offset-2 col-sm-8">
             <ol class="carousel-indicators">
@@ -273,7 +273,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-parallax-background" id="features1-1y" data-rv-view="294" style="background-image: url(assets/images/img-1858-312-2000x1333.jpg);">
+<section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-parallax-background" id="features1-1y" data-rv-view="620" style="background-image: url(assets/images/img-1858-312-2000x1333.jpg);">
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(40, 50, 78);"></div>
     <div class="mbr-section__container mbr-section__container--std-top-padding mbr-section__container--sm-bot-padding mbr-section-title container" style="padding-top: 124px;">
         <div class="mbr-header mbr-header--center mbr-header--wysiwyg row">
@@ -350,7 +350,7 @@
     </div>
 </section>
 
-<section class="mbr-section" id="header3-1y" data-rv-view="297">
+<section class="mbr-section" id="header3-1y" data-rv-view="623">
     <div class="mbr-section__container container mbr-section__container--isolated">
         <div class="mbr-header mbr-header--wysiwyg row">
             <div class="col-sm-8 col-sm-offset-2">
@@ -361,7 +361,7 @@
     </div>
 </section>
 
-<section class="mbr-instagram-feed" data-rows="" data-per-row-slider="5" data-spacing="4" data-full-width="true" data-token="6191179828.727bfe1.e6b3b495981a4be4823ccf641a842926" data-per-row-grid="" id="instagram-feed-block-1x" data-rv-view="299" style="background-image: url(assets/images/dsc-2669-2000x1333.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="mbr-instagram-feed" data-rows="" data-per-row-slider="5" data-spacing="4" data-full-width="true" data-token="6191179828.727bfe1.e6b3b495981a4be4823ccf641a842926" data-per-row-grid="" id="instagram-feed-block-1x" data-rv-view="625" style="background-image: url(assets/images/dsc-2669-2000x1333.jpg); padding-top: 120px; padding-bottom: 120px;">
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(26, 44, 93);">
     </div>
     <div class="container container_toggle">
@@ -377,7 +377,7 @@
     </div>
 </section>
 
-<section class="mbr-section" id="header3-1x" data-rv-view="301">
+<section class="mbr-section" id="header3-1x" data-rv-view="627">
     <div class="mbr-section__container container mbr-section__container--isolated">
         <div class="mbr-header mbr-header--wysiwyg row">
             <div class="col-sm-8 col-sm-offset-2">
@@ -388,7 +388,7 @@
     </div>
 </section>
 
-<section class="mbr-slider mbr-section mbr-section--no-padding carousel slide" data-ride="carousel" data-wrap="true" data-interval="5000" id="slider-18" data-rv-view="303" style="background-color: rgb(255, 255, 255);">
+<section class="mbr-slider mbr-section mbr-section--no-padding carousel slide" data-ride="carousel" data-wrap="true" data-interval="5000" id="slider-18" data-rv-view="629" style="background-color: rgb(255, 255, 255);">
     <div class="mbr-section__container">
         <div>
             <ol class="carousel-indicators">
@@ -464,7 +464,7 @@
     </div>
 </section>
 
-<section class="mbr-gallery mbr-section mbr-section--no-padding" id="gallery1-p" data-rv-view="315" style="background-color: rgb(255, 255, 255);">
+<section class="mbr-gallery mbr-section mbr-section--no-padding" id="gallery1-p" data-rv-view="641" style="background-color: rgb(255, 255, 255);">
     <!-- Gallery -->
     <div class=" mbr-gallery-layout-default container" style="padding-top: 124px; padding-bottom: 124px;">
         <div>
@@ -584,7 +584,31 @@
     </div>
 </section>
 
-<footer class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-parallax-background" id="footer1-l" data-rv-view="352" style="background-image: url(assets/images/img-6577ccccc-1452x832.jpeg);">
+<section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-parallax-background" id="content5-20" data-rv-view="683" style="background-image: url(assets/images/img-6627w-1740x704.jpg);">
+    <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(39, 47, 69);"></div>
+    <div class="mbr-section__container container mbr-section__container--first" style="padding-top: 93px;">
+        <div class="mbr-header mbr-header--wysiwyg row">
+            <div class="col-sm-8 col-sm-offset-2">
+                <h3 class="mbr-header__text">匠人的手</h3>
+                
+            </div>
+        </div>
+    </div>
+    <div class="mbr-section__container container mbr-section__container--middle">
+        <div class="row">
+            <div class="mbr-article mbr-article--wysiwyg col-sm-8 col-sm-offset-2"><p>看完上面一張一張精靈眼下的世界，他們是Filory中最冷靜的社會觀察家，用細節堆砌美感；用獨特雕琢世界的每個角落；最富有智慧的一群藝術家，接下來這些藝術品會交給矮人工匠為我們製作出來。</p><p><br></p><p>擁有了精靈的眼，也需要一雙巧手，去繪畫去刻啄出靈動之下的美景。</p><p>接下來帶領各位進入Filory裡最著名的矮人畫匠的小屋吧!!</p></div>
+        </div>
+    </div>
+    <div class="mbr-section__container container mbr-section__container--last" style="padding-bottom: 93px;">
+        <div class="row">
+            <div class="col-sm-8 col-sm-offset-2">
+                <div class="mbr-buttons mbr-buttons--center btn-inverse"><a class="mbr-buttons__btn btn btn-lg btn-default" href="page3.html"><span class="mbri-right mbr-iconfont mbr-iconfont-btn"></span>PAINTING</a></div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<footer class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-parallax-background" id="footer1-l" data-rv-view="681" style="background-image: url(assets/images/img-6577ccccc-1452x832.jpeg);">
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(39, 47, 69);"></div>
     <div class="mbr-section__container container">
         <div class="mbr-footer mbr-footer--wysiwyg row" style="padding-top: 49.2px; padding-bottom: 49.2px;">
